--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
@@ -553,4 +553,52 @@
     <value>Array of LabelScorePair objects.</value>
     <comment>property description</comment>
   </data>
+  <data name="ImageClassificationFDeitBase_DisplayName" xml:space="preserve">
+    <value>Image Classification</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="ImageClassificationFDeitBase_Description" xml:space="preserve">
+    <value>Performs classification of images.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="ImageClassificationFDeitBase_Path_DisplayName" xml:space="preserve">
+    <value>Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ImageClassificationFDeitBase_Path_Description" xml:space="preserve">
+    <value>Full path to the image file.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="ImageClassificationFDeitBase_Label_DisplayName" xml:space="preserve">
+    <value>Label</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ImageClassificationFDeitBase_Label_Description" xml:space="preserve">
+    <value>The result of the classification.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="ImageClassificationFDitBase_DisplayName" xml:space="preserve">
+    <value>Image Classification</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="ImageClassificationFDitBase_Description" xml:space="preserve">
+    <value>Performs image classification.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="ImageClassificationFDitBase_Path_DisplayName" xml:space="preserve">
+    <value>Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ImageClassificationFDitBase_Path_Description" xml:space="preserve">
+    <value>Full path to the image file.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="ImageClassificationFDitBase_Label_DisplayName" xml:space="preserve">
+    <value>Label</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ImageClassificationFDitBase_Label_Description" xml:space="preserve">
+    <value>The result of the image classification.</value>
+    <comment>property description</comment>
+  </data>
 </root>
