--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
@@ -649,4 +649,28 @@
     <value>The result of the classification.</value>
     <comment>property description</comment>
   </data>
+  <data name="TextSummarizationBert2BertSmall_DisplayName" xml:space="preserve">
+    <value>Text Summarization</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="TextSummarizationBert2BertSmall_Description" xml:space="preserve">
+    <value>Summarizes input text.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="TextSummarizationBert2BertSmall_Text_DisplayName" xml:space="preserve">
+    <value>Text</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextSummarizationBert2BertSmall_Text_Description" xml:space="preserve">
+    <value>The text to be summarized.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="TextSummarizationBert2BertSmall_Summary_DisplayName" xml:space="preserve">
+    <value>Summary</value>
+    <comment>property name</comment>
+  </data>
+  <data name="TextSummarizationBert2BertSmall_Summary_Description" xml:space="preserve">
+    <value>The summarized text.</value>
+    <comment>property description</comment>
+  </data>
 </root>
