--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
@@ -857,4 +857,36 @@
     <value>The generated text.</value>
     <comment>property description</comment>
   </data>
+  <data name="SentimentAnalysisDeBerta_DisplayName" xml:space="preserve">
+    <value>Sentiment Analysis</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="SentimentAnalysisDeBerta_Description" xml:space="preserve">
+    <value>Performs sentiment analysis of text.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="SentimentAnalysisDeBerta_Text_DisplayName" xml:space="preserve">
+    <value>Text</value>
+    <comment>property name</comment>
+  </data>
+  <data name="SentimentAnalysisDeBerta_Text_Description" xml:space="preserve">
+    <value>The text to be analyzed.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="SentimentAnalysisDeBerta_Label_DisplayName" xml:space="preserve">
+    <value>Label</value>
+    <comment>property name</comment>
+  </data>
+  <data name="SentimentAnalysisDeBerta_Label_Description" xml:space="preserve">
+    <value>The result of the analysis.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="SentimentAnalysisDeBerta_Score_DisplayName" xml:space="preserve">
+    <value>Score</value>
+    <comment>property name</comment>
+  </data>
+  <data name="SentimentAnalysisDeBerta_Score_Description" xml:space="preserve">
+    <value>The accuracy of the label.</value>
+    <comment>property description</comment>
+  </data>
 </root>
