4th-Ir.Custom: Added Image Classification - Facebook Levit 128S

--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
@@ -913,4 +913,28 @@
     <value>Result of the classification.</value>
     <comment>property description</comment>
   </data>
+  <data name="ImageClassificationFacebookLevit128S_DisplayName" xml:space="preserve">
+    <value>Image Classification</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="ImageClassificationFacebookLevit128S_Description" xml:space="preserve">
+    <value>Performs image classification.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="ImageClassificationFacebookLevit128S_Path_DisplayName" xml:space="preserve">
+    <value>Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ImageClassificationFacebookLevit128S_Path_Description" xml:space="preserve">
+    <value>Full path to the image file.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="ImageClassificationFacebookLevit128S_Label_DisplayName" xml:space="preserve">
+    <value>Label</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ImageClassificationFacebookLevit128S_Label_Description" xml:space="preserve">
+    <value>The result of the classification.</value>
+    <comment>property description</comment>
+  </data>
 </root>
