--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
@@ -985,4 +985,28 @@
     <value>The result of the classification.</value>
     <comment>property description</comment>
   </data>
+  <data name="ImageClassificationViTBase_DisplayName" xml:space="preserve">
+    <value>Image Classification</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="ImageClassificationViTBase_Description" xml:space="preserve">
+    <value>Performs image classification.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="ImageClassificationViTBase_Path_DisplayName" xml:space="preserve">
+    <value>Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ImageClassificationViTBase_Path_Description" xml:space="preserve">
+    <value>Full path to the image file.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="ImageClassificationViTBase_Label_DisplayName" xml:space="preserve">
+    <value>Label</value>
+    <comment>property name</comment>
+  </data>
+  <data name="ImageClassificationViTBase_Label_Description" xml:space="preserve">
+    <value>Result of the classification.</value>
+    <comment>property description</comment>
+  </data>
 </root>
