--- a/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
+++ b/4thIR.Custom/4thIR.Custom/_4thIR.Custom.Activities/Properties/Resources.resx
@@ -1273,4 +1273,36 @@
     <value>Full path to the storage folder.</value>
     <comment>property description</comment>
   </data>
+  <data name="SemanticSegmantationSegformer_DisplayName" xml:space="preserve">
+    <value>Semantic Segmentation</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="SemanticSegmantationSegformer_Description" xml:space="preserve">
+    <value>Performs segmentation of images.</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="SemanticSegmantationSegformer_Path_DisplayName" xml:space="preserve">
+    <value>Path</value>
+    <comment>property name</comment>
+  </data>
+  <data name="SemanticSegmantationSegformer_Path_Description" xml:space="preserve">
+    <value>Full path to the image file.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="SemanticSegmantationSegformer_StorageLocation_DisplayName" xml:space="preserve">
+    <value>Storage Location</value>
+    <comment>property name</comment>
+  </data>
+  <data name="SemanticSegmantationSegformer_StorageLocation_Description" xml:space="preserve">
+    <value>Full path to the storage folder.</value>
+    <comment>property description</comment>
+  </data>
+  <data name="SemanticSegmantationSegformer_SegmantationType_DisplayName" xml:space="preserve">
+    <value>Segmantation Type</value>
+    <comment>property name</comment>
+  </data>
+  <data name="SemanticSegmantationSegformer_SegmantationType_Description" xml:space="preserve">
+    <value>The segmentation type.</value>
+    <comment>property description</comment>
+  </data>
 </root>
